--- a/src/components/FormFooter/FormFooter.module.css
+++ b/src/components/FormFooter/FormFooter.module.css
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 10px;
-  background-color: #cfcfcf;
+  padding: 16px;
+  background-color: #f1f1f1;
+  border: 0.1px solid #cfcfcf;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
