--- a/src/components/FormHeader/FormHeader.module.css
+++ b/src/components/FormHeader/FormHeader.module.css
@@ -1,7 +1,8 @@
 .Header {
   user-select: none;
-  padding: 10px;
-  background-color: #cfcfcf;
+  padding: 16px;
+  background-color: #f1f1f1;
+  border: 0.1px solid #cfcfcf;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
